--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,67 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+* {
+  font-family: "Verdana", cursive, sans-serif;
+  color: #dccbcb;
 }
 
-.App-logo {
+body {
+  background-color: #dde5eb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+.App {
+  background-color: #273252;
+  max-width: 450px;
+  min-height: 200px;
+  height: min-content;
+  border-radius: 15px;
+  padding: 20px;
+  box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
+  display: flex;
+  justify-content: space-evenly;
+}
+.mark-section{
+  display: flex;
+  font-size: 24px;
+  align-items: center;
+}
+.quiz-section{
+  width: 100%;
+  position: relative;
+}
+.Answer-section{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  
+}
+button {
+  width: 100%;
+  font-size: 16px;
+  color: #ffffff;
+  background-color: #273e91;
+  border-radius: 15px;
+  display: flex;
+  padding: 5px;
+  justify-content: flex-start;
+  align-items: center;
+  border: 5px solid #5c6b7d;
+  cursor: pointer;
+  margin-top: 5px;
+
+}
+
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -35,4 +94,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
